Perkin-UAT/force-app/main/default/objects/SVMX_PS_Kit_Part__c/SVMX_PS_Kit_Part__c.object-meta.xml
<CustomObject>
    <label>Kit Part</label>
    <nameField>
        <displayFormat>KP-{00000000}</displayFormat>
        <label>Kit Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Parts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>