Perkin-UAT/force-app/main/default/objects/SVMX_PS_Kit_Part__c/fields/SVMX_PS_Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Delivering_Plant__c</fullName>
    <label>Delivering Plant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>