Perkin-UAT/force-app/main/default/objects/SVMX_PS_Kit_Part__c/fields/SVMX_PS_Kit__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Kit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit Parts</relationshipLabel>
    <relationshipName>Kit_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>