Perkin-UAT/force-app/main/default/objects/SVMX_PS_Kit_Part__c/fields/SVMX_PS_Part__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Part in Kits</relationshipLabel>
    <relationshipName>Part_in_Kits</relationshipName>
    <type>Lookup</type>
</CustomField>