Perkin-UAT/force-app/main/default/objects/SVMX_PS_Kit_Part__c/fields/SVMX_PS_Qty__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Qty__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>